Actions
Bug #12574
closedlm75: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../sun4u/io/i2c/clients/lm75.c: In function 'lm75_ioctl': ../../sun4u/io/i2c/clients/lm75.c:329: error: comparison between pointer and integer ../../sun4u/io/i2c/clients/lm75.c: In function 'lm75_do_attach': ../../sun4u/io/i2c/clients/lm75.c:487: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *'
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 54dcb32ca057468697455a0e99cc70f974c691b0
commit 54dcb32ca057468697455a0e99cc70f974c691b0 Author: Toomas Soome <tsoome@me.com> Date: 2020-04-27T16:27:34.000Z 12574 lm75: NULL pointer errors Reviewed by: Yuri Pankov <ypankov@fastmail.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions