12574 lm75: NULL pointer errors Reviewed by: Yuri Pankov <ypankov@fastmail.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>